# vectorization-maps

./: pyproject.toml  readme.md
vectorization/: GetNewMethods.py  vectorizationmethods.py
